--- a/sentence_bert_0912.ipynb
+++ b/sentence_bert_0912.ipynb
@@ -408,7 +408,8 @@
    "metadata": {},
    "source": [
     "### Bi-Encoder 활용\n",
-    "학습이 완료되면 학습에 활용된 구조는 버리고 Sentence Bert만 추출하여 활용합니다. 이와 관련한 예제는 [Sbert 깃허브 페이지](https://github.com/UKPLab/sentence-transformers/tree/master/examples/applications)에 코드로 자세히 설명하고 있으니 응용 방법에 대해 궁금한 경우 해당 링크를 참고 바랍니다."
+    "- 학습이 완료되면 학습에 활용된 구조는 버리고 Sentence Bert만 추출하여 활용합니다. -> 사전 모델로 학습을 시켜 두고 그 이후에 따로 떼서 쓴다는 의미\n",
+    "- 이와 관련한 예제는 [Sbert 깃허브 페이지](https://github.com/UKPLab/sentence-transformers/tree/master/examples/applications)에 코드로 자세히 설명하고 있으니 응용 방법에 대해 궁금한 경우 해당 링크를 참고 바랍니다."
    ]
   },
   {
